--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,22 +5,62 @@ version: 2.1
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  say-hello:
+  build:
     # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
-    docker:
-      - image: cimg/base:stable
+    machine:
+      image: ubuntu-2004:current
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
       - checkout
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
+          name: "Build"
+          command: "echo Building the project"
+  test:
+    machine:
+      image: ubuntu-2004:current
+    steps:
+      - checkout
+      - run:
+          name: "Test"
+          command: "echo Testing the project"
+  deploy:
+    machine:
+      image: ubuntu-2004:current
+    steps:
+      - checkout
+      - run:
+          name: "Deploy"
+          command: "echo Deploying the project"
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  say-hello-workflow:
+  staging-workflow:
+    filters:
+      branches:
+        - only:
+          - staging
     jobs:
-      - say-hello
+      - build
+      - test
+      - approve_deploy_staging:
+        type: approval
+      - deploy:
+        requires:
+          - approve_deploy_staging
+  main-workflow:
+    filters:
+      branches:
+        - only:
+          - main
+    jobs:
+      - build
+      - test
+      - approve_deploy_production:
+        type: approval
+      - deploy:
+        requires:
+          - approve_deploy_production
+
