--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  staging-workflow:
+  main-workflow:
     jobs:
       - build:
         <<: *staging
@@ -57,15 +57,3 @@ workflows:
       - deploy:
           requires:
             - approve_deploy_staging
-  production-workflow:
-    jobs:
-      - build:
-        <<: *production
-      - test
-      - approve_deploy_production:
-          type: approval
-          requires:
-            - test
-      - deploy:
-          requires:
-            - approve_deploy_production
