--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,15 +2,6 @@
 # See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
-staging: &staging
-  filters:
-    branches:
-      only: staging
-
-production: &production
-  filters:
-    branches:
-      only: main
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
@@ -48,8 +39,12 @@ workflows:
   main-workflow:
     jobs:
       - build:
-        <<: *staging
-      - test
+          filters:
+            branches:
+              only: staging
+      - test:
+        requires:
+          - build
       - approve_deploy_staging:
           type: approval
           requires:
